force-app/main/default/objects/Case/fields/test_labels_1__c.field-meta.xml
<CustomField>
    <fullName>test_labels_1__c</fullName>
    <label>Old Labels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1.2.20.0</fullName>
            </value>
            <value>
                <fullName>1.3.0.0</fullName>
            </value>
            <value>
                <fullName>1.3.0.1</fullName>
            </value>
            <value>
                <fullName>1.4.0.0</fullName>
            </value>
            <value>
                <fullName>1.4.9.0</fullName>
            </value>
            <value>
                <fullName>30 Days RMA Pending</fullName>
            </value>
            <value>
                <fullName>8 Days Pending</fullName>
            </value>
            <value>
                <fullName>8 hours</fullName>
            </value>
            <value>
                <fullName>Control4 Driver v109</fullName>
            </value>
            <value>
                <fullName>Control4 Driver v115</fullName>
            </value>
            <value>
                <fullName>CSCM-Pending</fullName>
            </value>
            <value>
                <fullName>Engineering Pending</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>License_Key</fullName>
            </value>
            <value>
                <fullName>License_Request</fullName>
            </value>
            <value>
                <fullName>Logs</fullName>
            </value>
            <value>
                <fullName>Negative Feedback</fullName>
            </value>
            <value>
                <fullName>Other Department Dependency</fullName>
            </value>
            <value>
                <fullName>Other Department Dependency Completed</fullName>
            </value>
            <value>
                <fullName>Out of Office Sent</fullName>
            </value>
            <value>
                <fullName>RMA_Approval</fullName>
            </value>
            <value>
                <fullName>RMA_Cancel</fullName>
            </value>
            <value>
                <fullName>RMA_Completed</fullName>
            </value>
            <value>
                <fullName>RMA_Initiated</fullName>
            </value>
            <value>
                <fullName>RMA_Pending</fullName>
            </value>
            <value>
                <fullName>Sample Macros</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>survey_sent</fullName>
            </value>
            <value>
                <fullName>Translate_Request_Sent</fullName>
            </value>
            <value>
                <fullName>Trial_Key</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>