force-app/main/default/objects/Case/fields/ThreadId__c.field-meta.xml
<CustomField>
    <fullName>ThreadId__c</fullName>
    <formula>&quot;ref:_00D&quot;&amp;MID(Id,4,2)&amp;RIGHT($Organization.Id, 4) &amp;&quot;._&quot;&amp; LEFT(Id,5)&amp;RIGHT(Id,6) &amp;&quot;:ref&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ThreadId</label>
    <type>Text</type>
</CustomField>