force-app/main/default/objects/Case/fields/Time_Since_Pending_D_H__c.field-meta.xml
<CustomField>
    <fullName>Time_Since_Pending_D_H__c</fullName>
    <formula>TEXT( 
FLOOR( NOW() - Pending_At__c ) 
) &amp; &quot; Days &quot; &amp; 
TEXT( 
FLOOR(MOD((NOW() - Pending_At__c)*24,24)) 
) &amp;&quot; Hours &quot;</formula>
    <label>Time Since Pending (D:H)</label>
    <type>Text</type>
</CustomField>