force-app/main/default/objects/Case/fields/Time_Since_Resolved_D_H__c.field-meta.xml
<CustomField>
    <fullName>Time_Since_Resolved_D_H__c</fullName>
    <formula>TEXT( 
FLOOR( NOW() - resolved_at__c ) 
) &amp; &quot; Days &quot; &amp; 
TEXT( 
FLOOR(MOD((NOW() - resolved_at__c)*24,24)) 
) &amp;&quot; Hours &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Since Resolved (D:H)</label>
    <type>Text</type>
</CustomField>