force-app/main/default/objects/Case/fields/Total_Number_of_devices_RMA__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_devices_RMA__c</fullName>
    <label>Total Number of devices(RMA)</label>
    <summarizedField>RMA_Device_Detail__c.of_Devices__c</summarizedField>
    <summaryForeignKey>RMA_Device_Detail__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>