force-app/main/default/objects/Case/fields/Troubleshooting_Steps__c.field-meta.xml
<CustomField>
    <fullName>Troubleshooting_Steps__c</fullName>
    <description>Add Troubleshooting steps before sending case for RMA Approval.</description>
    <inlineHelpText>Add Troubleshooting steps before sending case for RMA Approval.</inlineHelpText>
    <label>Troubleshooting Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>