force-app/main/default/objects/Case/recordTypes/New_Case_Creation.recordType-meta.xml
<RecordType>
    <fullName>New_Case_Creation</fullName>
    <active>false</active>
    <businessProcess>Desk</businessProcess>
    <label>New Case Creation</label>
</RecordType>