force-app/main/default/objects/Case/validationRules/Blocked_Email_Addresses.validationRule-meta.xml
<ValidationRule>
    <fullName>Blocked_Email_Addresses</fullName>
    <active>true</active>
    <description>Contact.Email = &apos;noreply@sfnotifications.com,FSPRD@covance.com,noreply@box.com,noreply@alerts.skype.com,adobeconnect_trials@adobe.com,donotreply@adobeconnect.com,service@ringcentral.com,invitations@linkedin.com,noreply@wetransfer.com,trackingupdates@fedex</description>
    <errorConditionFormula>OR (CONTAINS(LOWER(SuppliedEmail), &apos;notify@ringcentral.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;postmaster@techdirectbhcom.onmicrosoft.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;mouldmakers289@mouldmakers.top&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;contactus@outfitters.com.pk&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;bmirani@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;noreply@sf-notifications.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;FSPRD@covance.com,noreply@box.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;donotreply@adobeconnect.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;service@ringcentral.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;invitations@linkedin.com&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;noreply@wetransfer.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;trackingupdates@fedex.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;ringcentral@birdeye.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;service@teamviewer.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;lxie@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail),&apos;auto-notify@ups.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;ringcentral@express.medallia.com&apos;),CONTAINS(LOWER(SuppliedEmail),&apos;summary@acuityscheduling.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;avekariya@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;ammar@active-me.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;epandya@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;microsoftexchange329e71ec88ae4615bbc36ab6ce41109e@invixiuminc.onmicrosoft.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;jsheth@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;krpatel@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;kpatel@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;mpatel@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;ngajjar@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;pshukla@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;rprajapati@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;sbhatt@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;schhabra@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;wendy@huifantech.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;akapoor@invixium.com&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;lyearwood@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;editor@erafamemedia.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;damin@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;no-reply@sharepointonline.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;ssantos@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;stoda@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;vlazic@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;ychen@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;sales-india@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;sales@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;experience@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;support@sharefile.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;noreply@email.teams.microsoft.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;s4system-prodeu+adani.Doc696521074@eusmtp.ariba.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;apinquiry.in@siemens.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;noreply@janustechnology.co.uk&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;no-reply@zoom.us&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;pkginfo@ups.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;info@a3.seo-info.top&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;mdesai@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;michael@rocktech.com.hk&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;cgudimella@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;no-reply@notifications.skype.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;contact@highrankhub.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;dpatel@invixium.com&apos;),
CONTAINS(LOWER(SuppliedEmail), &apos;skapadia@invixium.com&apos;),
CONTAINS(LOWER(SuppliedEmail), &apos;vhargunani@invixium.com&apos;))</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Case cannot be created for this email address</errorMessage>
</ValidationRule>