force-app/main/default/objects/Case/validationRules/Blocked_Email_Addresses1.validationRule-meta.xml
<ValidationRule>
    <fullName>Blocked_Email_Addresses1</fullName>
    <active>true</active>
    <errorConditionFormula>OR(CONTAINS(LOWER(SuppliedEmail), &apos;statement@emiratesnbd.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;ujain@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;support@outfitters.zendesk.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;info@jp.salesforce.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;cloudmaster@domain.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;vkanzariya@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;onlinebanking@emiratesnbd.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;hvadavia@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;smahadik@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;avora@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;kbhuva@invixium.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;feature@erafamemedia.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;billing@zoom.us&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;sophie.lee@proexpoleadretrival.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;support@feenics.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;noreply@ces.cisco.com&apos;),CONTAINS(LOWER(SuppliedEmail), &apos;nkapadia@invixium.com&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;mail@sf-notifications.com&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;edu-news@mailer.e-flux.com&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;subscribers@erafamemedia.com&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;appatel@invixium.com&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;ajpatel@invixium.com&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;nmehmood@invixium.com&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;mgalletta@invixium.com&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;postmaster@jci.com&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;adani@service-now.com&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;mmuneer@invixium.com&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;sumotokyosei@hi.awaji-bb.jp&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;vendor.enablement@adani.com&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;stampingtool294@stampingtool.cc&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;mcinfo@ups.com&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;s4system-prodeu+adani.doc696521074@eusmtp.ariba.com&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;support@ringcentral.com&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;support@mailchimp.com&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;ypatel@invixium.com&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;gkhakkhar@invixium.com&apos;), CONTAINS(LOWER(SuppliedEmail), &apos;jupadhyay@invixium.com&apos;),
CONTAINS(LOWER(SuppliedEmail), &apos;dpatel@invixium.com&apos;),
CONTAINS(LOWER(SuppliedEmail), &apos;skapadia@invixium.com&apos;),
CONTAINS(LOWER(SuppliedEmail), &apos;vhargunani@invixium.com&apos;))</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Case cannot be created for this email address</errorMessage>
</ValidationRule>