force-app/main/default/objects/Case/validationRules/Category_Mandate.validationRule-meta.xml
<ValidationRule>
    <fullName>Category_Mandate</fullName>
    <active>false</active>
    <description>Case not saved if category field mandatory</description>
    <errorConditionFormula>AND(ISPICKVAL( Status, &quot;Open&quot; ), 
(ISBLANK(TEXT(custom_category__c))))</errorConditionFormula>
    <errorMessage>Please select Category</errorMessage>
</ValidationRule>