force-app/main/default/objects/Case/validationRules/Category_Mandate_NEW_TO_PENDING.validationRule-meta.xml
<ValidationRule>
    <fullName>Category_Mandate_NEW_TO_PENDING</fullName>
    <active>false</active>
    <description>The case will not be saved as a category field is mandatory.</description>
    <errorConditionFormula>AND(ISPICKVAL( Status, &quot;Pending&quot; ), 
(ISBLANK(TEXT(custom_category__c))))</errorConditionFormula>
    <errorMessage>The case category assignment is missing. Please Select a Category.</errorMessage>
</ValidationRule>