force-app/main/default/objects/Case/validationRules/Contact_Mandatory_for_Case_Resolved.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Mandatory_for_Case_Resolved</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL(Status, &apos;Resolved&apos;) ,OR( 
ISBLANK(Cause_Code__c),ISBLANK (ContactId)))</errorConditionFormula>
    <errorMessage>Case has to be associated with a contact, defect code and cause code before you can resolved the Case</errorMessage>
</ValidationRule>