force-app/main/default/objects/Case/listViews/ADI_BPCL_Cases.listView-meta.xml
<ListView>
    <fullName>ADI_BPCL_Cases</fullName>
    <booleanFilter>(1 OR 2 OR 3 or 4) and 5</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>ADI Global</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>BPCL</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Digitals India</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Bharat P</value>
    </filters>
    <filters>
        <field>CASES.CASE_NUMBER</field>
        <operation>equals</operation>
        <value>00028014,00028249,00028286,00028382,00028667,00028874,00028958,00029293</value>
    </filters>
    <label>ADI_BPCL Cases</label>
</ListView>