force-app/main/default/objects/Case/listViews/All_Cases_1.listView-meta.xml
<ListView>
    <fullName>All_Cases_1</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Case_Age__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>custom_rma_number__c</columns>
    <columns>custom_rma_status__c</columns>
    <columns>NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>Case_Open_Age_Total__c</columns>
    <columns>Case_Current_Open_Age__c</columns>
    <columns>custom_category__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>labels__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2023 12:00 AM</value>
    </filters>
    <label>All Cases</label>
</ListView>