force-app/main/default/objects/Case/listViews/All_Cases_Open_Pending_Kanban.listView-meta.xml
<ListView>
    <fullName>All_Cases_Open_Pending_Kanban</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Open,Pending</value>
    </filters>
    <label>All Cases New&amp;Open&amp;Pending</label>
</ListView>