force-app/main/default/objects/Case/listViews/All_Closed_Cases.listView-meta.xml
<ListView>
    <fullName>All_Closed_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>custom_rma_number__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>custom_rma_initiate_date__c</columns>
    <columns>custom_rma_device_received_date__c</columns>
    <columns>custom_rma_complete_date__c</columns>
    <columns>custom_rma_category__c</columns>
    <columns>custom_rma_status__c</columns>
    <columns>custom_rma_repair_cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE_DATE_ONLY</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2022 12:00 AM</value>
    </filters>
    <label>All Closed Cases</label>
    <sharedTo>
        <group>Admin</group>
    </sharedTo>
</ListView>