force-app/main/default/objects/Case/listViews/All_Closed_Cases_New.listView-meta.xml
<ListView>
    <fullName>All_Closed_Cases_New</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Open,Pending,Resolved,Closed</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>12/31/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>12/31/2024 12:00 AM</value>
    </filters>
    <label>All Closed Cases New</label>
</ListView>