force-app/main/default/objects/Case/listViews/All_New_Cases.listView-meta.xml
<ListView>
    <fullName>All_New_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>custom_rma_number__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>custom_category__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>Case_Age__c</columns>
    <columns>Priority_Color__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>contains</operation>
        <value>Default</value>
    </filters>
    <label>All New Cases</label>
</ListView>