force-app/main/default/objects/Case/listViews/All_Pending_Cases.listView-meta.xml
<ListView>
    <fullName>All_Pending_Cases</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Case_Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>Case_Age__c</field>
        <operation>greaterOrEqual</operation>
        <value>6</value>
    </filters>
    <filters>
        <field>Case_Age__c</field>
        <operation>lessOrEqual</operation>
        <value>10</value>
    </filters>
    <label>All Pending Cases</label>
</ListView>