force-app/main/default/objects/Case/listViews/All_Resolved_Cases.listView-meta.xml
<ListView>
    <fullName>All_Resolved_Cases</fullName>
    <columns>Defect_Code__c</columns>
    <columns>Cause_Code__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>custom_category__c</columns>
    <columns>custom_rma_number__c</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Case_Age__c</columns>
    <columns>Time_Since_Resolved_D_H__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Resolved</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE_DATE_ONLY</field>
        <operation>greaterThan</operation>
        <value>1/1/2020 12:00 AM</value>
    </filters>
    <label>All Resolved Cases</label>
    <sharedTo>
        <group>Admin</group>
    </sharedTo>
</ListView>