force-app/main/default/objects/Case/listViews/All_Resolved_cases_2025.listView-meta.xml
<ListView>
    <fullName>All_Resolved_cases_2025</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Resolved</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>12/31/2024 12:00 AM</value>
    </filters>
    <label>All Resolved cases 2025</label>
</ListView>