force-app/main/default/objects/Case/listViews/All_Unresolved_Cases.listView-meta.xml
<ListView>
    <fullName>All_Unresolved_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Hours_Since_New_D_H__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Open,Pending</value>
    </filters>
    <label>All Unresolved Cases</label>
</ListView>