force-app/main/default/objects/Case/listViews/ASC_Cases.listView-meta.xml
<ListView>
    <fullName>ASC_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>custom_category__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Open,Pending,Resolved,Closed</value>
    </filters>
    <label>ASC Cases</label>
</ListView>